# AI-Boxing-Technique-Analyzer-using-OpenCV-MediaPipe

./: README.md  app.py  boxing_analyzer.py  pose_estimator.py  pyproject.toml  reference_poses.py  requirements.txt  utils.py  video_processor.py
