[project]
name = "biomechanics-ai-analysis"
version = "0.1.0"
description = "A real-time motion analysis system using AI and computer vision"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.50.0",
]